<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host_label">Server Host: </string>
    <string name="server_host_hint">10.0.2.2</string>
    <string name="server_port_label">Server Port: </string>
    <string name="server_port_hint">8080</string>
    <string name="user_name_label">Username: </string>
    <string name="user_name_hint">dannyboi</string>
    <string name="password_label">Password: </string>
    <string name="password_hint">password</string>
    <string name="first_name_label">First Name: </string>
    <string name="first_name_hint">Jane</string>
    <string name="last_name_label">Last Name: </string>
    <string name="last_name_hint">Doe</string>
    <string name="email_label">Email: </string>
    <string name="email_hint">janedoe@gmail.com</string>
    <string name="gender">Gender: </string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="login_toast">First Name: %s and Last Name: %s</string>
    <string name="login_fail_toast">Your login attempt failed!</string>
    <string name="register_fail_toast">Your register attempt failed!</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapFragmentMessage">This is my map fragment!</string>
    <string name="title_activity_settings">Family Map: Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_menu">settings menu</string>
</resources>