<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_host_label" />

        <EditText
            android:id="@+id/server_host_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_host_hint" />

        <TextView
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_port_label" />

        <EditText
            android:id="@+id/server_port_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_port_hint" />

        <TextView
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name_label" />

        <EditText
            android:id="@+id/username_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name_hint" />

        <TextView
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_hint" />

        <TextView
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name_label" />

        <EditText
            android:id="@+id/first_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint" />

        <TextView
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name_label" />

        <EditText
            android:id="@+id/last_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint" />

        <TextView
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label" />

        <EditText
            android:id="@+id/email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint" />

        <LinearLayout
            android:layout_width="245dp"
            android:layout_height="30dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                style="@style/Base.CardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/genderGroup">

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male" />

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/login_button" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/register_button" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>